General fixes. New endpoints. Added moderator.
